manifests/vvn-ce/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vvn-backend
  namespace: vvn
spec:
  selector:
    app: vvn-backend
  ports:
    - port: 8000
      targetPort: 8000
