manifests/vvn-ce/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vvn-backend
  namespace: vvn
spec:
  parentRefs:
    - name: external
      namespace: infra
      sectionName: https
  hostnames:
    - "vvn.chillpickle.org"
  rules:
    - backendRefs:
        - name: vvn-backend
          port: 8000
